# uni-project

./: .gitignore  pyproject.toml
corporate/admin/: __init__.py  gallery.py
corporate/migrations/: 0001_initial.py  0002_instrument.py  0003_instrument_description_en_instrument_description_fa_and_more.py  0004_alter_instrument_instructors.py  0005_profile.py  0006_gallery.py
corporate/models/: __init__.py  gallery.py  instrument.py
kernel/: settings.py  urls.py
