[tool.poetry]
name = "uni-project"
version = "0.1.0"
description = ""
authors = ["MohmdFo <mohammad.fotouhi80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-sage-blog = "^0.2.9"
django-phonenumber-field = "^8.0.0"
phonenumbers = "^8.13.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
